# Rust-SNN

./: .gitignore  Cargo.toml  README.md
simulation/: inputSpikes.txt  outputCounters.txt  outputInterface.py  parameters.py  runSimulation.py
simulation/networkParameters/: assignments.npy  thresholds.npy  thresholdsOut.txt  weights.npy
src/: lib.rs  main.rs  test.txt
src/models/: mod.rs
src/models/neuron/: lif.rs  mod.rs
src/snn/: builder.rs  dyn_snn.rs  layer.rs  mod.rs  neuron.rs  processor.rs  snn.rs
src/snn/builders/: alternative_builder.rs  builder.rs  dyn_builder.rs  mod.rs  tests.rs
tests/: tests.rs  tests_builder.rs  tests_process.rs  tests_snn_builder.rs  tests_snn_dyn_builder.rs
