[package]
name = "pds_snn"
version = "0.1.0"
edition = "2021"
authors = ["Mario Mastrandrea", "Giuseppe Lazzara", "Francesco Rosati"]
description = "Library aiming to provide support for the implementation of Spiking Neural Network models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"